# pyCascadingCondition

./: pyproject.toml
pyCascadingCondition/: __init__.py  core.py
tests/: test_core.py
