[tool.poetry]
name = "pycascadingcondition"
version = "0.1.2"
description = ""
authors = ["SUDA Mikihrio <s@sudame.net>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.4"
networkx = "^2.6.3"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^6.2.5"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
